--- a/test.html
+++ b/test.html
@@ -54,7 +54,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus nulla convallis urna suscipit, sit amet tincidunt ante condimentum. Donec feugiat, ligula ornare placerat dapibus, sapien ante venenatis nunc, quis lacinia nisl lorem vel urna. Curabitur ornare ante nulla, ac.</p>
         </section>
         <center>
-            <md-filled-tonal-button>View Certificates</md-filled-tonal-button>
+            <md-filled-tonal-button class="--md-sys-color-background">View Certificates</md-filled-tonal-button>
         </center>
     </div>
     <div class="rounded-box">
